--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav a:hover {
 
 .container {
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 20px;
   max-width: 700px;
   margin-top: 100px;
 }
@@ -72,30 +72,54 @@ nav a:hover {
 
 .aprendizados {
   margin-top: 25px;
-  height: 200px;
+  display: inline-block;
 }
 
 .lado-esquerdo {
+  padding: 10px;
   float: left;
   width: 40%;
+  margin-bottom: 20px;
+  border: 3px dotted black;
 }
 
 .lado-direito {
+  padding: 10px;
   float: right;
   width: 40%;
+  border: 3px dotted black;
 }
 
 .lado-direito h3 {
   margin-bottom: 10px;
 }
 
+.table {
+  margin: 30px 0;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table , th , td {
+  padding: 5px;
+  border: 1px solid grey;
+}
+
+tr:nth-child( even ) {
+  background-color: lightgrey;
+}
+
 #rodape {
   background-color: lightgrey;
-  margin-top: 50px;
   padding: 15px;
-  border: none;
+  clear: both;
 }
 
 #rodape a {
+  color: green;
   text-decoration: none;
+}
+
+#rodape a:hover {
+  color: chartreuse;
 }
