--- a/style.css
+++ b/style.css
@@ -1,27 +1,28 @@
 body{
     background-color: rgb(253, 251, 251);
 }
-header{
+#cabecalho{
     position: fixed;
     top: 0;
     width: 100%;
-
-}
-
-#cabecalho{
     background-color: brown;
     text-align: center;
     color: cornsilk;
     height: 100px;
-    width: 100%;
     margin-right: 8px;
-    top: 0px;
 }
 
+nav{
+    position: absolute;
+    background-color: cadetblue;
+    width: 100%;
+    margin-top: -30px;
+}
 
 #titulo{
     padding-top: 27px;
     margin-top: 0px;
+    text-align: center;
 }
 
 #minha_foto{
@@ -29,23 +30,55 @@ header{
     width: 200px;
     height: 250px;
     display: block;
-    margin-top: 100px;
+    margin-top: 20px;
 }
 #titulo_das_listas{
     text-align: center;
     margin-top: 130px;
+    margin-left: 220px;
 }
 
 #listas ol, ul{
     position: absolute;
     display: inline-block;
-    margin-top: 75px;
+    margin-top: auto;
 }
 
 #licoes_aprendidas{
     margin-left: 300px;
+    margin-top: auto;
 }
 
 #licoes_a_aprender{
     margin-left: 500px;
+    margin-top: auto;
+}
+
+#artigos{
+    position: absolute;
+    margin-top: 37%;
+    border: solid 1px black;
+}
+
+article{
+    width: 376px;
+    float: left;
+}
+
+aside{
+    width: 168px;
+    margin-left: 161px;
+    position: absolute;
+    display: inline;
+    border: solid 1px black;
+}
+
+footer{
+    position: absolute;
+    margin-top: 399px;
+    background-color: brown;
+    color: white;
+    width: 100%;
+    text-align: center;
+    bottom: 0px;
 }
