--- a/style.css
+++ b/style.css
@@ -58,14 +58,15 @@ h3{
 
 .lado-esquerdo{
     float: left;
-
+    width:40%;
 }
 
 .lado-direito{
     float: right;
+    width:40%;
 }
 footer{
-    clear:both    
+    clear:both;   
 }
 
 .licoes h3{
