--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav{
 
 #artigos{
     position: absolute;
-    margin-top: 20%;
+    margin-top: 260px;
     border: solid 1px black;
     margin-left: 20%;
 }
