--- a/style.css
+++ b/style.css
@@ -18,6 +18,64 @@ main {
   margin-top: 120px;
 }
 
-#minha_foto {
-  width: 300px;
+#container_image {
+  width: 100%;
+  height: 300px;
+  background-color: rgb(81, 146, 155);
+  text-align: center;
 }
+
+#minha_foto {
+  height: 300px;
+}
+
+/* Conteúdo das lições aprendidas e a aprender */
+
+#container_licoes {
+  margin-top: 100px;
+}
+
+#container_ol {
+  background-color: rgb(39, 167, 60);
+  width: 49.8%;
+  display: inline-block;
+}
+
+#container_ul {
+  background-color: chartreuse;
+  width: 49.8%;
+  display: inline-block;
+}
+
+#container_ol h2 {
+  margin-left: 40px;
+  font-size: 25px;
+} 
+
+#licoes_aprendidas {
+  margin-left: 40px;
+  font-size: 20px;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+#container_ul h2 {
+  margin-left: 40px;
+  font-size: 25px;
+} 
+
+#licoes_a_aprender {
+  margin-left: 40px;
+  font-size: 20px;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+/* Conteúdo dos artigos */
+
+#conteudo {
+  background-color: coral;
+  margin-top: 100px;
+  padding: 20px;
+}
+
