--- a/style.css
+++ b/style.css
@@ -13,14 +13,15 @@ h1 , h2 , h3 {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#quem-sou h2 , h3 {
-	font-size: 24px;
-	margin-top: 15px;
-}
-
 p , li {
 	font-size: 16px;
 	line-height: 20px;
+}
+
+.container {
+	max-width: 60%;
+	margin: 0 auto;
+	text-align: center;
 }
 
 /* Header */
@@ -59,6 +60,12 @@ p , li {
 	margin-left: 10px;
 	margin: 130px 0px 50px 0px;
 }
+
+#quem-sou h2 , h3 {
+	font-size: 24px;
+	margin-top: 15px;
+}
+
 
 #minha_foto {
 	width: 200px;
@@ -139,26 +146,44 @@ th {
 	border-right: solid 3px #f7ec59;
 }
 
+/* Aprendizado */
 
+.article-container {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	width: 50%;
+	height: 250px;
+}
 
+.article-container p {
+	line-height: 22px;
+}
 
-
+.article-container h2 {
+	margin-bottom: 20px;
+	padding-bottom: 10px;
+	border-bottom: 3px solid black;
+}
 
 .lado-esquerdo , .lado-direito {
 	display: inline-block;
-	width: 40%;
+	width: 45%;
 }
 
 .lado-direito {
 	float: right;
 }
 
-.container-aprendizado {
-	width: 960px;
+.lado-esquerdo {
+	float: left;
 }
 
-.container {
-	max-width: 60%;
-	margin: 0 auto;
-	text-align: center;
+/* Rodape */
+
+#rodape {
+	background-color: #090809;
+	height: 15px;
+	clear: both;
+	color: #f8f7f9;
+	padding: 15px;
 }
