--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
+/* Geral */
 * {
   margin: 0;
   padding: 0;
+  line-height: 23px;
+  text-decoration: none;
 }
 
 body {
   background-color: rgb(253, 251, 251);
 }
 
+/* Cabeçalho e Barra de navegação */
 #cabecalho {
   width: 100%;
   height: 10%;
@@ -19,13 +23,15 @@ body {
 }
 
 #titulo {
-  font-family: -apple-system, sans-serif;
+  font-family: Ubuntu, Cantarell, sans-serif;
+  font-size: 2.2em;
   margin: 0 auto;
+  padding: 15px;
   color: rgba(255, 255, 255, 0.8);
 }
 
 #minha_foto {
-  top: 27%;
+  top:35%;
   position: absolute;
   left: 3%;
   width: 80px;
@@ -33,7 +39,7 @@ body {
 
 #navegacao {
   position: fixed;
-  top: 84px;
+  top: 83px;
   background-color: rgb(23, 21, 21);
   width: 100%;
   padding: 10px;
@@ -46,37 +52,64 @@ body {
   color: rgba(255, 255, 255, 0.8);
 }
 
+/* Containers da seção de lições */
+#container_licoes {
+  width: 55%;
+  margin: 140px 15px 10px;
+  padding-right: 30px;
+}
+
 #licoes_aprendidas , #licoes_a_aprender {
+  display: inline-block;
+  margin: 20px 35px 30px;
   list-style: decimal;
 }
 
-.lado-esquerdo {
-  margin-left: 20px;
-  margin-right: 20px;
+#licoes_aprendidas h2 , #licoes_a_aprender h2 {
+  margin-bottom: 15px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
+  background-color: rgba(23, 21, 21, 0.5);
+  color: rgba(23, 21, 21, 0.8);
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(23, 21, 21, 0.8);
+  border-radius: 50px;
+}
+
+#licoes_aprendidas {
+  border-right: 2px solid rgb(23, 21, 21);
+  padding-right: 70px;
+  margin-right: 10px;
+}
+
+#licoes_a_aprender {
+  margin-right: 0;
+}
+
+/* Container da seção de artigos */
+.lado-esquerdo , .lado-direito {
+  margin: 10px;
   padding: 10px 35px;
   margin-top: 10px;
-  width: 25%;
+  width: 42%;
+}
+
+.lado-esquerdo {
+  float: left;
 }
 
 .lado-direito {
-  margin-top: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 10px 35px;
-  width: 25%;
+  float: right;
 }
 
-.container_licoes_aprendidas {
-  padding: 10px 35px;
-  width: 25%;
-  margin: 130px 20px 10px;
-}
-
-.container_licoes_a_aprender {
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 10px 35px;
-  width: 25%;
+.container_lados {
+  display: inline-block;
+  width: 90%;
+  margin: auto;
+  padding: 10px;
+  border: 1px solid green;
 }
 
 div {
