--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 .back-color{
     background-color:rgb(253, 251, 251);
 }
+.foto-perfil{
+    margin-top:95px;
+}
+
 header{
     background-color: steelblue;
     top:0px;
@@ -24,6 +28,7 @@ h3{
     line-height:3px;
     letter-spacing:2px;
     word-spacing:1px;
+    text-decoration:underline;
 }
 
 .nome{
@@ -36,8 +41,7 @@ h3{
 
 .contato{
     background-color: steelblue;
-
-
+    width:100%;
 }
 
 .lista-esquerda{
@@ -66,7 +70,8 @@ h3{
     width:40%;
 }
 footer{
-    clear:both;   
+    clear:both;
+    font-style:italic;
 }
 
 .licoes h3{
@@ -74,3 +79,13 @@ footer{
     background-color: chartreuse;   
 }
 
+.tabela{
+    background-color: chartreuse;
+    margin-top:20px;
+    margin-left:62px;
+}
+.link-ajuda{
+    clear:both;
+    text-decoration: underline;
+    margin-top:50px;
+}
