--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
-body{
-    background-color: rgb(253, 251, 251);
-}
-#cabecalho{
-    top: 0;
-    background-image: ;
-}
-.titulo{
-    background-color: chartreuse;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: ;
-}
+    /*cor da de fundo da pagina toda*/
+    body {
+        background-color: rgb(253, 251, 251);
+    }
+    /*inicio do titolo*/
+    .section-title {
+        font-weight: 600;
+        line-height: 42px;
+    }
+    /**/
+    #cabecalho {
+        
+        font-weight: 600;
+        top: 0;
+    }
+    /**/
+    .titulo {
+        background-color: rgb(93, 86, 138);
+        color: darkgreen;
+        font-family:
+    }
+    /**/
+    .imgtitolo {
+        border-radius: 50%;
+        width: 80px;
+    }
+    /**/
