--- a/style.css
+++ b/style.css
@@ -1,10 +1,87 @@
 body {
   background-color: rgb(253, 251, 251);
   margin: 0;
+  font-family: Urbanist, sans-serif;
 }
 
 .header {
   position: fixed;
   top: 0;
+  z-index: 7;
+  background-color: #223843;
+  width: 100%;
+  height: 25%;
+}
+
+.content {
+  position: absolute;
+  top: 25%;
+  line-height: 23px;
+}
+
+#titulo {
+  margin-top: 3%;
+  text-align: center;
+  color: white;
+}
+
+.navigation {
+  position: fixed;
+  top: 16%;
+  z-index: 7;
+  width: 100%;
+  text-align: center;
+
+}
+
+ul.nav_list li {
+  display: inline;
+  margin-right: 6%;
+}
+
+ul.nav_list li a {
+  color: white;
+  text-decoration: none;
+}
+
+#minha_foto {
+  width: 20%;
+  border-radius: 100%;
+  margin-left: 40px;
+}
+
+.section_setup {
+  background-color: #DBD3D8;
+  border-radius: 10%;
+  padding: 20px;
+  margin-top: 3%;
+  margin-left: 6%;
+  margin-right: 2%;
+  width: 25%;
+  display: inline-block;
+}
+
+.lado-esquerdo, .lado-direito {
+  background-color: #DBD3D8;
+  border-radius: 10%;
+  padding: 32px;
+  margin: 3% 5%;
+  width: 35%;
+  display: inline-block;
+}
+
+#rodape {
+  background-color: #223843;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+ul.nav_list li a:hover {
+  font-size: larger;
 }
 
